Bug 282885 - When synchronizing meta-data with Nepomuk, the tag "Scanned for Faces" show up in Dolphin
Summary: When synchronizing meta-data with Nepomuk, the tag "Scanned for Faces" show u...
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Database-Baloo (other bugs)
Version First Reported In: 2.1.1
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-27 05:07 UTC by Kolia
Modified: 2017-08-15 21:40 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.3.0
Sentry Crash Report:


Attachments
The tag Scanned for fces appears in the faceted research in Dolphin (26.93 KB, image/png)
2011-09-28 05:20 UTC, Kolia
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kolia 2011-09-27 05:07:21 UTC
Version:           2.1.1 (using KDE 4.7.1) 
OS:                Linux

I use the face recognition feature, and as I understand it when it's scanning pictures it assigns a tag "scanned for faces" to mark which ones have been scanned already. It's apparently a kind of "internal" tag as it doesn't show up in Digikam GUI.

So far so good.

However if I allow Digikam meta-data to be stored in Nepomuk, the tag "Scanned for Faces" appaears in Dolphin in the list of tags available in the faceted search panel. I think this tag was intended for an internal use and should not appears in any UI.

As a side effect (I think); If i allow digikam to read meta-data from Nepomuk after this, the "Scanned for Faces" tag also appears in the GUI, on every picture already scanned. Apparently when it goes to Nepomuk it lost his "internal" aspect and becomes visible in Digikam.

Reproducible: Always

Steps to Reproduce:
Use face recognition
Activate "store digikam metadata in nepomuk" in the configuration option

Actual Results:  
"Scanned for Faces" appears in the tag list available to search with in Dolphin.

Expected Results:  
The tag list in Dolphin should only show the normal tags used in Digikam and in Nepomuk, and not this one which I think only exists for some internal process in Digikam.
Comment 1 Kolia 2011-09-28 05:20:57 UTC
Created attachment 64025 [details]
The tag Scanned for fces appears in the faceted research in Dolphin
Comment 2 Marcel Wiesweg 2011-10-07 17:35:24 UTC
Git commit 4a541f73153c702925bdb864eebe4f57c9253410 by Marcel Wiesweg.
Committed on 07/10/2011 at 19:34.
Pushed by mwiesweg into branch 'master'.

Ignore internal tags when pushing tags to Nepomuk

BUG: 282885

M  +2    -1    NEWS
M  +36   -25   utilities/nepomuk/digikamnepomukservice.cpp

http://commits.kde.org/digikam/4a541f73153c702925bdb864eebe4f57c9253410
Comment 3 Marcel Wiesweg 2011-10-08 16:26:28 UTC
*** Bug 276846 has been marked as a duplicate of this bug. ***